--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -53,8 +53,8 @@
     gap: 8px;
     width: 100%;
     height: 228px;
-    background-color: #1C1C1C;
-    color: #EFEDE8;
+    background-color: #1c1c1c;
+    color: #efede8;
     border-radius: 12px;
     padding: 14px 19px 14px 14px;
 
@@ -63,11 +63,12 @@
     z-index: 1;
 
     @media screen and (min-width: 768px) {
-           height: 276px;
-        }
-    
-        @media screen and (min-width: 1440px) {}
-};
+        height: 276px;
+    }
+
+    @media screen and (min-width: 1440px) {
+    }
+}
 
 .dropdown_list_visible {
     display: none;
