--- a/src/components/ui/UserForm/UserForm.module.scss
+++ b/src/components/ui/UserForm/UserForm.module.scss
@@ -254,7 +254,7 @@
     }
 
     &.error {
-        border-color: #d80027;
+        border-color: $santas-node-red;
         margin-bottom: 4px;
     }
 
