--- a/src/components/auth/SignIn/SignIn.module.scss
+++ b/src/components/auth/SignIn/SignIn.module.scss
@@ -104,7 +104,7 @@
     }
 
     &.error {
-        border-color: #d80027;
+        border-color: $santas-node-red;
         margin-bottom: 4px;
     }
 
