--- a/src/components/auth/SignUp/SignUp.module.scss
+++ b/src/components/auth/SignUp/SignUp.module.scss
@@ -97,7 +97,7 @@
     }
 
     &.error {
-        border-color: #d80027;
+        border-color: $santas-node-red;
         margin-bottom: 4px;
     }
 
