--- a/src/components/pages/ExercisesPage/AddExerciseForm/AddExerciseForm.module.scss
+++ b/src/components/pages/ExercisesPage/AddExerciseForm/AddExerciseForm.module.scss
@@ -21,7 +21,7 @@
             width: 270px;
             height: 226px;
             flex-shrink: 0;
-            border-radius: 12px;
+            border-radius: $main-b-radius;
             border: 1px solid rgba(239, 237, 232, 0.2);
             background:
                 linear-gradient(
@@ -115,7 +115,7 @@
         padding: 12px 18px;
         justify-content: center;
         gap: 4px;
-        border-radius: 12px;
+        border-radius: $main-b-radius;
         border: 1px solid rgba(239, 237, 232, 0.2);
         background: rgba(239, 237, 232, 0.05);
 
