--- a/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
+++ b/src/components/pages/ProductsPage/ProductsList/ProductsList.module.scss
@@ -3,47 +3,35 @@
 @import '../../../../scss/variables';
 
 .list {
-    width: 375px;
     display: flex;
     flex-direction: column;
     gap: 20px;
-    margin-top: 40px;
-    margin-bottom: 80px;
-    max-width: fit-content;
-    margin-right: auto;
-    margin-left: auto;
+    padding-bottom: 80px;
 
     @media screen and (min-width: 768px) {
-        width: 776px;
         height: 660px;
-        display: flex;
         flex-direction: row;
         flex-wrap: wrap;
         overflow-x: hidden;
         overflow-y: scroll;
-        gap: 0;
-        margin-bottom: 48px;
-        justify-content: space-evenly;
-    }
+        row-gap: 32px;
+        column-gap: 16px;
+    };
 
     @media screen and (min-width: 1440px) {
         width: 850px;
-        padding: 0;
-        margin-left: 0;
         height: 487px;
-        margin-top: 0;
-        margin-bottom: 81px;
-    }
-}
+    };
+};
 
 .list::-webkit-scrollbar {
     width: 8px;
     height: 153px;
-    border-radius: 12px;
+    border-radius: $main-b-radius;
     background-color: #efede81a;
-}
+};
 
 .list::-webkit-scrollbar-thumb {
-    border-radius: 12px;
-    background-color: #ef8964;
-}
+    border-radius: $main-b-radius;
+    background-color: $christmas-hover-orange;
+};
