--- a/src/components/pages/ProductsPage/ProductsModal/ProductsModal.module.scss
+++ b/src/components/pages/ProductsPage/ProductsModal/ProductsModal.module.scss
@@ -19,7 +19,7 @@
     outline: none;
     width: 287px;
     height: 34px;
-    border-radius: 12px;
+    border-radius: $main-b-radius;
     border: 1px solid$snow-alpha-white;
     font-size: 14px;
 
@@ -64,7 +64,7 @@
     outline: none;
     width: 287px;
     height: 34px;
-    border-radius: 12px;
+    border-radius: $main-b-radius;
     border: 1px solid$snow-alpha-white;
 
     @include transition();
