--- a/src/components/pages/ProductsPage/ProductsPage.module.scss
+++ b/src/components/pages/ProductsPage/ProductsPage.module.scss
@@ -1,26 +1,31 @@
-.products_page_container {
+.products__container{
     padding-top: 40px;
-    padding-bottom: 40px;
-    max-width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    width: 335px;
+    margin: 0 auto;
 
-    & h2 {
-        max-width: fit-content;
-    }
     @media screen and (min-width: 768px) {
+        width: 704px;
         padding-top: 72px;
-        padding-bottom: 32px;
-
-        & h2 {
-            max-width: none;
-        }
-    }
+    };
 
     @media screen and (min-width: 1440px) {
-        max-width: 1440px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
+        width: auto;
+        padding-top: 68px;
+    };
+};
+
+.products__page_container {
+    padding-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+        padding-bottom: 32px;
     }
-}
+
+    @media screen and (min-width: 1440px) { 
+    flex-direction: row;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 28px;
+    };
+};
