--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -1,5 +1,6 @@
 @import '../../../scss/colors';
 @import '../../../scss/mixins';
+@import '../../../scss/variables';
 
 .dropdown {
     position: relative;
@@ -13,7 +14,7 @@
     padding: 14px;
     width: 146px;
     height: 46px;
-    border-radius: 12px;
+    border-radius: $main-b-radius;
     border: 1px solid#EFEDE84D;
     text-align: left;
     cursor: pointer;
@@ -55,7 +56,7 @@
     height: 228px;
     background-color: #1c1c1c;
     color: #efede8;
-    border-radius: 12px;
+    border-radius: $main-b-radius;
     padding: 14px 19px 14px 14px;
 
     overflow-x: hidden;
@@ -80,7 +81,7 @@
     margin-right: 7px;
 }
 .dropdown_list::-webkit-scrollbar-thumb {
-    border-radius: 12px;
+    border-radius: $main-b-radius;
     background-color: #efede81a;
 }
 
