fix(routes): create import file
Виправив трохи синтаксичні помилки у словах.
Створив routesImport.jsx і переніс туди всі імпорти щоб розгрузити routes файл

--- a/src/components/containers/MainContainer/MainContainer.module.scss
+++ b/src/components/containers/MainContainer/MainContainer.module.scss
@@ -98,7 +98,7 @@
     }
 }
 
-.descriprion__container {
+.description__container {
     display: flex;
     flex-wrap: wrap;
     gap: 4px;
@@ -148,7 +148,7 @@
         right: 32px;
     }
 
-    .descriprion__container {
+    .description__container {
         display: flex;
         align-items: baseline;
         gap: 8px;
