--- a/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
+++ b/src/components/pages/ProductsPage/ProductsItem/ProductsItem.module.scss
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     width: 335px;
-    min-height: 141px;
+    height: fit-content;
     border-radius: $main-b-radius;
     border: 1px solid $lonely-modal-gray;
     padding: 16px;
